--- a/백준/2750_수_정렬하기.ipynb
+++ b/백준/2750_수_정렬하기.ipynb
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9cPWJLWjEZMj",
-        "outputId": "30f14059-888b-4a5e-d384-205e63b8224f"
+        "outputId": "e418045a-a34f-4d00-c158-a423e42d0240"
       },
       "source": [
         "N = int(input())\n",
@@ -77,7 +77,7 @@
         "for _ in range(N) : \n",
         "    arrays.append(int(input()))\n",
         "\n",
-        "nummber = len(arrays)\n",
+        "number = len(arrays)\n",
         "for i in range(number):\n",
         "    min = 1001\n",
         "    for j in range(i, number):\n",
@@ -87,35 +87,29 @@
         "    \n",
         "    arrays[index],arrays[i] = arrays[i] , arrays[index]\n",
         "\n",
-        "print(arrays)"
+        "for i in arrays:\n",
+        "    print(i)"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "5\n",
+            "4\n",
             "5\n",
+            "2\n",
+            "1\n",
+            "3\n",
+            "1\n",
             "2\n",
             "3\n",
             "4\n",
-            "1\n",
-            "[1, 2, 3, 4, 5]\n"
+            "5\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fuXvRTHeEny9"
-      },
-      "source": [
-        "41\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
