--- a/백준/1181_단어정렬.ipynb
+++ b/백준/1181_단어정렬.ipynb
@@ -71,7 +71,7 @@
         "for i in arrays:\n",
         "    print(i)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
       "source": [
         ""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,6 +138,100 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "538BfxBGDfHx"
+      },
+      "source": [
+        "N = int(input())\n",
+        "\n",
+        "arrays = []\n",
+        "\n",
+        "for _ in range(N) : \n",
+        "    arrays.append(str(input()))\n",
+        "\n",
+        "from functools import cmp_to_key\n",
+        "\n",
+        "def compare(a,b):\n",
+        "    if (len(a) > len(b)):\n",
+        "        return 1\n",
+        "    elif (len(a) < len(b)):\n",
+        "        return -1\n",
+        "    else: #길이가 같으면\n",
+        "        return a < b\n",
+        "\n",
+        "arrays.sort()\n",
+        "arrays.sort(key = cmp_to_key(compare))\n",
+        "\n",
+        "for i in arrays:\n",
+        "    print(i)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7rjQjRrKCxIr",
+        "outputId": "aaf2b068-dd50-43c9-b4d5-822a9e9633ed"
+      },
+      "source": [
+        "arrays = [\n",
+        "'but',\n",
+        "'i',\n",
+        "'wont',\n",
+        "'hesitate',\n",
+        "'no',\n",
+        "'more',\n",
+        "'no',\n",
+        "'more',\n",
+        "'it',\n",
+        "'cannot',\n",
+        "'wait',\n",
+        "'im',\n",
+        "'yours']\n",
+        "\n",
+        "arrays = list(set(arrays))\n",
+        "from functools import cmp_to_key\n",
+        "\n",
+        "def compare(a,b):\n",
+        "    if (len(a) > len(b)):\n",
+        "        return 1\n",
+        "    elif (len(a) < len(b)):\n",
+        "        return -1\n",
+        "    else: #길이가 같으면\n",
+        "        return a < b\n",
+        "\n",
+        "arrays.sort()\n",
+        "arrays.sort(key = cmp_to_key(compare))\n",
+        "for i in arrays:\n",
+        "    print(i)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "i\n",
+            "im\n",
+            "it\n",
+            "no\n",
+            "but\n",
+            "more\n",
+            "wait\n",
+            "wont\n",
+            "yours\n",
+            "cannot\n",
+            "hesitate\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
