--- a/위클리챌런지/위클리_챌런지_6주차.ipynb
+++ b/위클리챌런지/위클리_챌런지_6주차.ipynb
@@ -59,7 +59,7 @@
         "head2head = [\"NLWL\",\"WNLL\",\"LWNW\",\"WWLN\"]\n",
         "solution(weights, head2head)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jBaM9LzHa9Wh",
-        "outputId": "aeb8d252-0489-4a93-fded-9ba043037f9f"
+        "outputId": "2cb1ec6f-bf5e-470b-9f16-98c591c19a6d"
       },
       "source": [
         "def solution(weights, head2head):\n",
@@ -101,7 +101,7 @@
         "        cnt= 0 # 무거운 것 \n",
         "        winscore = 0 # 이긴 횟수\n",
         "        winrate= 0.0 # 성률\n",
-        "        for j in range(len(head2head)):\n",
+        "        for j in range(len(head2head[i])):\n",
         "            if head2head[i][j] != 'N': fightcnt+=1\n",
         "            if (head2head[i][j]=='W'):\n",
         "                winscore += 1\n",
@@ -118,7 +118,7 @@
         "head2head = [\"NLWL\",\"WNLL\",\"LWNW\",\"WWLN\"]\n",
         "solution(weights, head2head)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 2
         }
       ]
     },
@@ -179,7 +179,7 @@
         "head2head = [\"NLWL\",\"WNLL\",\"LWNW\",\"WWLN\"]\n",
         "solution(weights, head2head)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
         "head2head = [\"NNN\",\"NNN\",\"NNN\"]\n",
         "solution(weights, head2head)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
