--- a/알고리즘의 개요와 실습 환경 구축_inflearn 강의/다이나믹_프로그래밍.ipynb
+++ b/알고리즘의 개요와 실습 환경 구축_inflearn 강의/다이나믹_프로그래밍.ipynb
@@ -161,6 +161,75 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aMdIG1c0enWQ",
+        "outputId": "5f1f6dcc-a505-43cb-b7b4-a3ceec43904e"
+      },
+      "source": [
+        "d = [0]*100\n",
+        "\n",
+        "def dp(x):\n",
+        "    # 이 부분 없으면 무한 반복\n",
+        "    if (x == 1) or (x == 2):\n",
+        "        return 1\n",
+        "    if (d[x]!=0):\n",
+        "        return d[x]\n",
+        "    # 자기 앞의 숫자와 자기 앞의 앞의 숫자\n",
+        "    #return d[x] = dp(x-1) + dp(x-2)\n",
+        "    d[x] = dp(x-1) + dp(x-2)\n",
+        "    return d[x]\n",
+        "    \n",
+        "x = 30\n",
+        "dp(x)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "832040"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QpgvMXCLfMTn"
+      },
+      "source": [
+        "# 다이나믹 프로그래밍 타일링 문제 풀어보기 (1/2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u5WHICtwge7h"
+      },
+      "source": [
+        "# 다이나믹 프로그래밍 타일링 문제 풀어보기 (2/2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "orDDJXDbfNf1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
