--- a/알고리즘의 개요와 실습 환경 구축_inflearn 강의/에라토스테네스의_체.ipynb
+++ b/알고리즘의 개요와 실습 환경 구축_inflearn 강의/에라토스테네스의_체.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "에라토스테네스의 체.ipynb",
+      "name": "에라토스테네스의_체.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -34,7 +34,7 @@
         "print(isPrimeNumber(100))\n",
         "print(isPrimeNumber(97))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,21 +53,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-18vC2c0OELH",
-        "outputId": "26f4ca2a-53da-4bce-b4ad-0100f6008cb9"
+        "outputId": "d73502b3-fd54-4718-cdff-f7a8d53859d3"
       },
       "source": [
         "import math\n",
         "def isPrimeNumber(x):\n",
         "    end = int(math.sqrt(x))\n",
         "    print(end)\n",
-        "    for i in range(2,end):\n",
+        "    for i in range(2,end+1):\n",
         "        if (x % i ==0): return False\n",
         "    return True\n",
         "\n",
         "print(isPrimeNumber(100))\n",
         "print(isPrimeNumber(97))"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,20 +88,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yaAqqt8FO6NJ",
-        "outputId": "6bb62080-918b-4b34-f788-3ffd723a904f"
+        "outputId": "08c24b5e-310d-4616-ac5f-2ea840de4ca6"
       },
       "source": [
         "def isPrimeNumber(x):\n",
         "    end = int(x ** 0.5)\n",
         "    print(end)\n",
-        "    for i in range(2,end):\n",
+        "    for i in range(2,end+1):\n",
         "        if (x % i ==0): return False\n",
         "    return True\n",
         "\n",
         "print(isPrimeNumber(100))\n",
         "print(isPrimeNumber(97))"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "\n",
         "isPrimeNumberSieve()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
         "        a[j] = False\n",
         "print(primes)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
