--- a/백준/11375_열혈강호_.ipynb
+++ b/백준/11375_열혈강호_.ipynb
@@ -125,13 +125,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i51RydzEza8n"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i51RydzEza8n",
+        "outputId": "9ad92c70-a062-4798-e4df-2e93578fafe6"
       },
       "source": [
-        ""
+        "import sys\n",
+        "input = sys.stdin.readline\n",
+        "#MAX = 1001\n",
+        "n, m = map(int, input().split())\n",
+        "a = [[] for i in range(n + 1)]\n",
+        "d = [0 for i in range(m + 1)]\n",
+        "count = 0\n",
+        "\n",
+        "# 매칭데 성공한 경우 True, 실패한 경우 False\n",
+        "def dfs(x):\n",
+        "    if c[x]:\n",
+        "        return False\n",
+        "    c[x] = 1\n",
+        "    for i in a[x]:\n",
+        "        if d[i] == 0 or dfs(d[i]):\n",
+        "            d[i] = x\n",
+        "            return True\n",
+        "    return False\n",
+        "\n",
+        "for i in range(1, n + 1):\n",
+        "    s = list(map(int, input().split()))\n",
+        "    for j in s[1:]:\n",
+        "        a[i].append(j)\n",
+        "\n",
+        "for i in range(1, n + 1):\n",
+        "    c = [0 for _ in range(n + 1)]\n",
+        "    if dfs(i):\n",
+        "        count += 1\n",
+        "print(count)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 5\n",
+            "2 1 2\n",
+            "1 1\n",
+            "2 2 3\n",
+            "3 3 4 5\n",
+            "1 1\n",
+            "4\n"
+          ]
+        }
+      ]
     }
   ]
 }
