--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
@@ -56,6 +56,7 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "data = input()\n",
         "#첫번째 문자를 숫자로 변경하여 대입\n",
         "result = int(data[0])\n",
@@ -66,7 +67,8 @@
         "        result += num\n",
         "    else:\n",
         "        result *= num\n",
-        "print(result)"
+        "print(result)\n",
+        "'''"
       ],
       "metadata": {
         "colab": {
@@ -106,11 +108,11 @@
         "print(result)"
       ],
       "metadata": {
-        "id": "N2COuj5hAcnZ",
-        "outputId": "fa986c25-b10f-4a27-a539-e659cf77e2da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "N2COuj5hAcnZ",
+        "outputId": "fa986c25-b10f-4a27-a539-e659cf77e2da"
       },
       "execution_count": 3,
       "outputs": [
