--- a/Level-2/가장_큰_정사각형_찾기.ipynb
+++ b/Level-2/가장_큰_정사각형_찾기.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "가장 큰 정사각형 찾기.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "name": "가장_큰_정사각형_찾기.ipynb",
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +17,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ub-xFVG3P3b5",
-        "outputId": "a51366c2-88da-40b0-e552-f5ddb5a71de3"
+        "id": "XqewTKcwai1q",
+        "outputId": "5966d3ae-4f5b-44ea-f78f-ee12576c9a83"
       },
       "outputs": [
         {
@@ -35,7 +34,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 2
         }
       ],
       "source": [
@@ -65,33 +64,7 @@
         ""
       ],
       "metadata": {
-        "id": "fr_fGHjEYCIy",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "98e466d3-2ef6-431d-98b1-92522e6d2437"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "QlpLUyUQddBL"
+        "id": "KspPgDnaaohz"
       },
       "execution_count": null,
       "outputs": []
