--- a/Level-2/괄호_회전하기.ipynb
+++ b/Level-2/괄호_회전하기.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "괄호 회전하기.ipynb",
+      "name": "괄호_회전하기.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -16,6 +16,37 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "#테스트 케이스를 뚫었다.\n",
+        "def solution(s):\n",
+        "    tmp_s = s\n",
+        "    answer = 0\n",
+        "    if len(s) % 2 == 1: return answer\n",
+        "    for i in range(len(s)):\n",
+        "        cnt = 0\n",
+        "        t = tmp_s.replace(\"()\", \"\").replace(\"{}\", \"\").replace(\"[]\", \"\")\n",
+        "        while cnt <= 27:\n",
+        "            t = t.replace(\"{}\", \"\").replace(\"[]\", \"\").replace(\"()\", \"\")\n",
+        "            t = t.replace(\"[]\", \"\").replace(\"()\", \"\").replace(\"{}\", \"\")\n",
+        "            t = t.replace(\"()\", \"\").replace(\"{}\", \"\").replace(\"[]\", \"\")\n",
+        "            cnt+=1\n",
+        "\n",
+        "        if t == \"\":\n",
+        "            answer += 1\n",
+        "\n",
+        "        tmp_s = tmp_s[1:] + tmp_s[0]\n",
+        "\n",
+        "    \n",
+        "    return answer"
+      ],
+      "metadata": {
+        "id": "yEptfQXxLnmA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
     {
       "cell_type": "code",
       "source": [
@@ -56,7 +87,7 @@
         "id": "PeYWVRR8Dyd9",
         "outputId": "16576975-8eb9-4c65-ed21-09b6847c2542"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
